--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,6 @@ jobs:
           echo "  Author: $commit_author ($commit_email)"
           echo "  Message: $commit_msg"
           echo "  Date: $commit_date"
-          echo "  Has Body: $([ -s commit_body.txt ] && echo 'Yes' || echo 'No')"
 
       - name: Get latest release tag (hex-aware)
         id: get_latest_tag
@@ -130,39 +129,6 @@ jobs:
             echo "- **${{ steps.commit_info.outputs.commit_msg }}** (\`${{ steps.commit_info.outputs.commit_short_hash }}\`) by ${{ steps.commit_info.outputs.commit_author }}" > push_commits.txt
           fi
 
-      - name: Get commits since last release
-        id: commits_since_release
-        run: |
-          latest_tag="${{ steps.get_latest_tag.outputs.latest_tag }}"
-          
-          if [ -z "$latest_tag" ]; then
-            echo "📋 No previous release found - this will be the initial release"
-            total_commits_count=1
-            echo "- Initial release commit" > all_commits_log.txt
-          else
-            # 最新タグから現在までのコミット数と内容を取得
-            total_commits_count=$(git rev-list ${latest_tag}..HEAD --count)
-            
-            echo "📋 Checking commits since $latest_tag..."
-            echo "📊 Found $total_commits_count total commits since last release"
-            
-            if [ $total_commits_count -eq 0 ]; then
-              echo "⚠️ No new commits since $latest_tag"
-              echo "No new changes since last release" > all_commits_log.txt
-            else
-              echo "📋 Generating complete commit log since $latest_tag..."
-              
-              # 全てのコミット情報を取得（詳細比較用）
-              git log ${latest_tag}..HEAD --pretty=format:"- %s (\`%h\`) by %an" --date=short > all_commits_log.txt
-              
-              echo "📋 All commits since $latest_tag:"
-              cat all_commits_log.txt
-            fi
-          fi
-          
-          echo "total_commits_count=$total_commits_count" >> $GITHUB_OUTPUT
-          echo "latest_tag=$latest_tag" >> $GITHUB_OUTPUT
-
       - name: Extract version from commit message or increment by 1 (hex)
         id: get_version
         run: |
@@ -218,17 +184,17 @@ jobs:
             echo "🔄 Incremented version by 1 (hex): $new_tag (from $prev)"
           fi
 
-      - name: Check if no new commits
+      - name: Check if no new commits  
         id: check_commits
         run: |
-          total_commits_count="${{ steps.commits_since_release.outputs.total_commits_count }}"
           latest_tag="${{ steps.get_latest_tag.outputs.latest_tag }}"
+          push_commits_count="${{ steps.push_commits.outputs.push_commits_count }}"
           
-          if [ -n "$latest_tag" ] && [ "$total_commits_count" -eq "0" ]; then
+          if [ -n "$latest_tag" ] && [ "$push_commits_count" -eq "0" ]; then
             echo "⚠️ No new commits since $latest_tag. Skipping release."
             echo "skip_release=true" >> $GITHUB_OUTPUT
           else
-            echo "✅ Found $total_commits_count total commits since last release. Proceeding with release."
+            echo "✅ Found $push_commits_count commits in this push. Proceeding with release."
             echo "skip_release=false" >> $GITHUB_OUTPUT
           fi
 
@@ -342,7 +308,6 @@ jobs:
           commit_date="${{ steps.commit_info.outputs.commit_date }}"
           push_commits_count="${{ steps.push_commits.outputs.push_commits_count }}"
           has_push_commits="${{ steps.push_commits.outputs.has_push_commits }}"
-          total_commits_count="${{ steps.commits_since_release.outputs.total_commits_count }}"
           latest_tag="${{ steps.get_latest_tag.outputs.latest_tag }}"
           has_body="${{ steps.commit_info.outputs.has_body }}"
           
@@ -385,27 +350,6 @@ jobs:
             fi
             
             echo ""
-            echo "## 📊 Previous Release Comparison"
-            echo ""
-            
-            if [ -n "$latest_tag" ]; then
-              echo "**Previous version**: $latest_tag"
-              echo "**Total commits since $latest_tag**: $total_commits_count commits"
-              
-              if [ "$total_commits_count" -gt "$push_commits_count" ]; then
-                echo ""
-                echo "<details>"
-                echo "<summary>View all $total_commits_count commits since $latest_tag</summary>"
-                echo ""
-                cat all_commits_log.txt
-                echo ""
-                echo "</details>"
-              fi
-            else
-              echo "This is the initial release."
-            fi
-            
-            echo ""
             echo "## 📦 Assets"
             echo ""
             echo "- Source code archive (ZIP)"
@@ -430,4 +374,14 @@ jobs:
           echo "📝 Generated release notes for push with $push_commits_count commits"
 
       - name: Create GitHub Release
-        if: steps.check_commits.outputs.skip_release == 'false' && steps.fin
+        if: steps.check_commits.outputs.skip_release == 'false' && steps.find_available_tag.outputs.found == 'true'
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ steps.verify_tag.outputs.verified_tag }}
+          name: "🚀 Release ${{ steps.verify_tag.outputs.verified_tag }}"
+          draft: false
+          prerelease: false
+          body_path: release_notes.md
+          files: ${{ steps.zip.outputs.zipname }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
