--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,10 @@ on:
 permissions:
   contents: write
   actions: read
+  workflows: write
+  pull-requests: write
+  issues: write
+  repository-projects: write
 
 jobs:
   release:
